# colabri-doc

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  Dockerfile.debian  README.md  app.env.example  docker-compose.yml
src/: config.rs  main.rs  ws_bridge.rs
src/auth/: auth.rs
src/clients/: app_service_client.rs  mod.rs
src/db/: dbcolab.rs  mod.rs  util.rs
src/docs/: mod.rs
src/handlers/: diagnostics.rs  doc_clear_acl.rs  doc_delete.rs  doc_export.rs  doc_latest.rs  doc_lib.rs  doc_move_lib.rs  doc_version.rs  health.rs  item.rs  mod.rs
src/logging/: logging.rs
src/models/: colab.rs  colabdoc.rs  diagnostics.rs  doc.rs  doc_clear_acl.rs  doc_delete.rs  doc_export.rs  doc_latest.rs  doc_lib.rs  doc_move_lib.rs  doc_version.rs  docsession.rs  error.rs  health.rs  item.rs  lorodoc.rs  messages.rs  mod.rs  ready.rs
src/routes/: api.rs  auth_middleware.rs  mod.rs
src/services/: auth_service.rs  doc_db_service.rs  doc_edit_service.rs  doc_service.rs  mod.rs
src/static/: statement_doc_template.json
src/utils/: scope_guard.rs
src/websocket/: handler.rs  mod.rs  msg_load_handler.rs  msg_ping_handler.rs  msg_update_handler.rs
src/ws/: connctx.rs  doccontext.rs  docctx.rs  docsession.rs  mod.rs  userctx.rs  wscolab.rs
