[package]
name = "colabri-doc"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.0", features = ["base64"] }
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
dotenvy = "0.15"
envy = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3.31"
loro = "^1"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
loro-websocket-server = { git = "https://github.com/loro-dev/protocol.git", rev = "278c30c8f5034af1073cecc848786a81f2ea9572", package = "loro-websocket-server"}
loro-protocol = { git = "https://github.com/loro-dev/protocol.git", rev = "278c30c8f5034af1073cecc848786a81f2ea9572", package = "loro-protocol"}
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
sea-query = "0.31"
sea-query-binder = { version = "0.6", features = ["sqlx-postgres"] }
