[package]
name = "colabri-doc"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"
serde_cbor = "0.11"
serde_with = { version = "3.0", features = ["base64"] }
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
dotenvy = "0.15"
envy = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3.31"
loro = "^1"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
loro-websocket-server = { git = "https://github.com/karstenda/loro-protocol.git", rev = "36e496660f22023efcb5765723f196e1d3752d9a", package = "loro-websocket-server"}
loro-protocol = { git = "https://github.com/karstenda/loro-protocol.git", rev = "36e496660f22023efcb5765723f196e1d3752d9a", package = "loro-protocol"}
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "macros"] }
sea-query = "0.31"
sea-query-binder = { version = "0.6", features = ["sqlx-postgres"] }
moka = { version = "0.12", features = ["future", "sync"] }
base64 = "0.22"
tokio-tungstenite = "0.28.0"
cookie = "0.18.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
reqwest = { version = "0.12.26", features = ["blocking", "json"] }
sysinfo = "0.30"

